# ROS2_simple

./: README.md
rescue_quadrotor_exercise/: package.xml  setup.py
rescue_quadrotor_exercise/config/: rviz2_quadrotor_config.rviz
rescue_quadrotor_exercise/launch/: start_operation_base_launch.xml
rescue_quadrotor_exercise/rescue_quadrotor_exercise/: human_detector_status.py
rescue_quadrotor_exercise_1/: README.md  setup.cfg
rescue_quadrotor_exercise_1/rescue_quadrotor_exercise/: QuadrotorGoalPublisher.py  pcontroller_base.py
