<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rescue_quadrotor_exercise</name>
  <version>0.5.0</version>
  <description>Rescue Robotics Assignment 1</description>
  <maintainer email="holger.schwegmann@uni-luebeck.de">rescue</maintainer>
  <license>TODO: License declaration</license>


  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
